<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="16sp"
        android:layout_marginHorizontal="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_intro"
            android:textAlignment="center"
            />

        </LinearLayout>





    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Edad"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hijos"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/campo_Edad"/>
                <TextView
                    android:id="@+id/datoEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/edad_seleccion"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRestarEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:src="@drawable/botonrestar"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:src="@drawable/botonsumar"/>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/hijos"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toEndOf="@id/Edad"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/campo_numeroDeHijos"/>
            <TextView
                android:id="@+id/datoHijos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/nHijos_seleccion"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:src="@drawable/botonrestar"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:src="@drawable/botonsumar"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/SalarioNeto"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/GrupoProfesional"
        app:layout_constraintTop_toBottomOf="@id/Edad">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_salarioBruto"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/datoSalarioBruto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:hint="@string/cantidadSalarioBruto"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/GrupoProfesional"
        android:layout_width="0sp"
        android:layout_height="60sp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintStart_toEndOf="@id/SalarioNeto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hijos">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_grupoProfesional"/>

            <Spinner
                android:id="@+id/datoGrupoProfesional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/grupo_profesional_array"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/EstadoCivil"
        android:layout_width="0sp"
        android:layout_height="60sp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/GradoDiscapacidad"
        app:layout_constraintTop_toBottomOf="@id/SalarioNeto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_estadoCivil"/>

            <Spinner
                android:id="@+id/datoEstadoCivil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/estado_civil_array"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/GradoDiscapacidad"
        android:layout_width="0sp"
        android:layout_height="60sp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintStart_toEndOf="@id/EstadoCivil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GrupoProfesional">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_GradoDeDiscapacidad"/>

            <Spinner
                android:id="@+id/datoGradoDiscapacidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/grado_discapacidad_array"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Paga"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16sp"
        app:layout_constraintTop_toBottomOf="@id/EstadoCivil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/textn_pagas"/>
            <TextView
                android:id="@+id/datoPaga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/nPagasText" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarPaga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:src="@drawable/botonrestar"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarPaga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:src="@drawable/botonsumar"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Paga"
        android:text="@string/calcularbton"

        />
</androidx.constraintlayout.widget.ConstraintLayout>